spade-tests/src/snapshots/spade_tests__ports_integration__backward_types_can_not_be_put_in_registers.snap
---
source: spade-tests/src/ports_integration.rs
---
entity x(clk: clock, a: ~& bool) -> bool {
    reg(clk) _ = a;
    true
}


error: The syntax for inverted ports has changed from ~ to inv
  ┌─ testinput:1:25
  │
1 │ entity x(clk: clock, a: ~& bool) -> bool {
  │                         ^ ~ cannot be used in a type
  │
  = Consider using inv
  │
1 │ entity x(clk: clock, a: inv & bool) -> bool {
  │                         ~~~~
